Fixed wireframes collapsing

--- a/components/CaseStudiesCommon/Wireframes/styles.module.scss
+++ b/components/CaseStudiesCommon/Wireframes/styles.module.scss
@@ -401,10 +401,11 @@
 
   .animatedContainer {
     max-height: 572px;
-    margin-left: -10px;
+    margin-left: 20px;
+    padding-bottom: 15px; 
 
     @include phone {
-      margin-left: 50px;
+      margin-left: 15px;
     }
   }
 
